tests/core/snapshots/auth.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema
  @server
  @upstream
  @link(id: "htpasswd", src: ".htpasswd", type: Htpasswd)
  @link(id: "jwks", src: "jwks.json", type: Jwks) {
  query: Query
}

type Query {
  data: String @expr(body: "data") @protected
}
