tests/core/snapshots/auth_order.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  data: String
}

schema {
  query: Query
}
