tests/core/snapshots/auth_order.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server @upstream @link(id: "htpasswd", src: ".htpasswd", type: Htpasswd) {
  query: Query
}

type Query {
  data: String @http(url: "http://upstream/data") @protected
}
