tests/core/snapshots/batching-default.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server
  @upstream(baseURL: "http://jsonplaceholder.typicode.com", batch: {delay: 10, headers: []}, httpCache: 42) {
  query: Query
}

type Post {
  body: String
  id: Int
  title: String
  user: User
    @http(
      batch: {batchKey: "id", extractionPath: ["id"]}
      path: "/users"
      query: [{key: "id", value: "{{.value.userId}}"}, {key: "foo", value: "bar"}]
    )
  userId: Int!
}

type Query {
  posts: [Post] @http(path: "/posts?id=11&id=3&foo=1")
}

type User {
  id: Int
  name: String
}
